fix login form on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1219,7 +1219,7 @@ a {
   }
   .box-form-login {
     background: #023366;
-    position: absolute;
+    position: fixed;
     top: 66px;
     right: 0;
     padding: 0 0 30px;
